toolchain/internal/core/analysis/testdata/errors/spreads/undefined_spread_in_inline.vdl
// @expect: E202

type Envelope {
  payload {
    ...MissingBase
    value string
  }
}
